# mlb-predictor

./: .gitignore  README.md  docker-compose.yml  package-lock.json
app/: App.tsx  app.json  package-lock.json  package.json
app/src/: constants.ts  theme.ts
app/src/api/: client.ts
app/src/screens/: CalendarScreen.tsx  DashboardScreen.tsx  HistoryScreen.tsx  ModelsTab.tsx  MonitorTab.tsx  PickDetailScreen.tsx  ProximosScreen.tsx
backend/: alembic.ini  pyproject.toml  run_scheduler.py
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/db/: models.py
backend/app/models/: __init__.py  features.py  predictor.py  trainer.py
backend/app/pipeline/: calibration.py  monitor.py  news.py  notion_logger.py  odds_api.py  results.py  retrain.py  scheduler.py  statcast.py
backend/app/simulation/: __init__.py  edge_calc.py  monte_carlo.py
backend/migrations/: env.py
backend/migrations/versions/: 38c0ecb62244_add_model_versions.py  75032f7fb007_initial.py
backend/scripts/: seed_data.py  seed_games.py  train_models.py
scripts/: setup.ps1
